Add branches, rooms and schedules logic (#20)
* Add branches, rooms and schedules logic

* Add schdeules and rooms endpoints

* Add test for branch, schedules and rooms endpoints
