# app/serializers/api/v1/branch_serializer.rb
@@ -1,0 +1,6 @@
+class Api::V1::BranchSerializer < ActiveModel::Serializer
+  attributes :id, :name, :phone, :email, :address, :latitude, :longitude, :timezone, :active
+
+  has_many :rooms, serializer: Api::V1::RoomSerializer
+  has_many :schedules, serializer: Api::V1::ScheduleSerializer
+end
