# app/serializers/api/v1/room_serializer.rb
@@ -1,0 +1,3 @@
+class Api::V1::RoomSerializer < ActiveModel::Serializer
+  attributes :id, :name, :capacity, :layout
+end
